[package]
name = "jwt-ui"
version = "1.0.0"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = """
A Terminal UI for decoding/encoding JSON Web Tokens
"""
documentation = "https://github.com/jwt-rs/jwt-ui"
keywords = ["jwt", "oidc", "oauth", "oauth2"]
repository = "https://github.com/jwt-rs/jwt-ui"
homepage = "https://github.com/jwt-rs/jwt-ui"
readme = "README.md"
license = "MIT"
exclude = [
    "assets/*",
    ".github",
    "Makefile.toml",
    "CONTRIBUTING.md",
    "*.log",
    "tags",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.23.0", default-features = false, features = [
    'crossterm',
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1"
clap = { version = "4.4", features = [
    "help",
    "usage",
    "error-context",
    "derive",
] }
tui-input = "0.8"
tui-textarea = { version = "0.2", default-features = false, features = [
    "ratatui-crossterm",
] }
backtrace = "0.3"
human-panic = "1.1"
base64 = "0.21"
jsonwebtoken = "9.1"
chrono = "0.4"

# XCB is a PITA to compile for ARM so disabling the copy feature on ARM for now
[target.'cfg(target_arch = "x86_64")'.dependencies]
clipboard = "0.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bin]]
bench = false
path = "src/main.rs"
name = "jwtui"

[profile.release]
lto = true
codegen-units = 1
