[package]
name = "jwt-ui"
version = "1.1.0"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = """
A Terminal UI for decoding/encoding JSON Web Tokens
"""
documentation = "https://github.com/jwt-rs/jwt-ui"
keywords = ["jwt", "oidc", "oauth", "oauth2"]
repository = "https://github.com/jwt-rs/jwt-ui"
homepage = "https://github.com/jwt-rs/jwt-ui"
readme = "README.md"
license = "MIT"
exclude = [
    "assets/*",
    ".github",
    "Makefile.toml",
    "CONTRIBUTING.md",
    "*.log",
    "tags",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26.2", default-features = false, features = [
    'crossterm',
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1"
clap = { version = "4.4", features = [
    "help",
    "usage",
    "error-context",
    "derive",
] }
tui-input = "0.8"
tui-textarea = { version = "0.4.0", default-features = false, features = [
    "crossterm",
] }
backtrace = "0.3"
human-panic = "1.1"
jsonwebtoken = "9.2.0"
chrono = "0.4"
copypasta = "0.10.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bin]]
bench = false
path = "src/main.rs"
name = "jwtui"

[profile.release]
lto = true
codegen-units = 1
